Fixing cropped h1 text

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1044,7 +1044,7 @@ footer {
 
 @media screen and (max-width: 950px) {
     #text-container {
-        max-width: 380px;
+        max-width: 420px;
     }
 
     #text-container h1 {
